--- a/src/pages/list/list.scss
+++ b/src/pages/list/list.scss
@@ -5,5 +5,78 @@
   .listContainer {
     border-radius: 10px;
     flex: 6;
+
+    .p-sidebar-left {
+      .p-sidebar-content {
+        width: 100%;
+        margin: 0;
+        padding: 0;
+      }
+      direction: ltr;
+      .header {
+        display: flex;
+        margin: 10px 0;
+        justify-content: center;
+        padding: 5px;
+        div {
+          font-weight: 900;
+          font-size: 25px;
+          color: $header-color;
+        }
+        i {
+          padding-top: 4px;
+          margin-left: 8px;
+          font-weight: 900;
+          font-size: 25px;
+          color: $header-color;
+        }
+      }
+      .title {
+        text-align: center;
+        color: $header-color;
+        padding-bottom: 20px;
+        border-bottom: 1px solid $header-color;
+      }
+      .list {
+        display: inline;
+        list-style: none;
+        .item {
+          margin-top: 15px;
+          h6 {
+            font-size: 16px;
+          }
+          i {
+            margin-left: 10px;
+            font-size: 20px;
+          }
+          color: $primary-color;
+          padding: 10px;
+          display: flex;
+          justify-content: end;
+          &:hover {
+            i {
+              transform: rotateY(360deg);
+              transition: 0.5s all;
+            }
+            h6 {
+              transition: 0.5s all;
+              transform: translateX(-10px);
+            }
+            cursor: pointer;
+            background-color: #eee;
+          }
+          i {
+            transform: none;
+            transition: 0.5s all;
+          }
+          h6 {
+            transition: 0.5s all;
+          }
+          word-wrap: break-word;
+          box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.075);
+          background-color: #fff;
+        }
+      }
+    }
   }
 }
