--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -1,78 +1,94 @@
 @import "../../style/vars";
-.profileContent {
-  .wrapper {
-    width: 100%;
-    width: 100%;
-    height: auto;
-    min-height: 100vh;
-    padding: 50px 20px;
-    padding-top: 50px;
-    display: flex;
-  }
-  .profile-card {
-    width: 100%;
-    min-height: 460px;
-    margin: auto;
-    box-shadow: 0px 8px 60px -10px rgba(13, 28, 39, 0.6);
-    background: #fff;
-    border-radius: 12px;
-    max-width: 800px;
-    position: relative;
-
-    &__img {
-      width: auto;
-      height: 340px;
-      margin-left: auto;
-      margin-right: auto;
-
-      img {
-        display: block;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        border-top-left-radius: 12px;
-        border-top-right-radius: 12px;
-      }
-    }
-
-    &__cnt {
-      margin-top: 35px;
-      text-align: center;
-      padding: 0 20px;
-      padding-bottom: 40px;
-      transition: all 0.3s;
-    }
-
-    &__name {
-      font-weight: 700;
-      font-size: 24px;
-      color: $primary-color;
-      margin-bottom: 15px;
-    }
-
-    &__txt {
-      font-size: 18px;
-      font-weight: 500;
-      color: #324e63;
-      margin-bottom: 15px;
-      strong {
-        //color: #ff2846;
-        font-weight: 700;
-      }
-    }
-
-    &-loc {
+.profile {
+  .profileContent {
+    .wrapper {
+      width: 100%;
+      width: 100%;
+      height: auto;
+      min-height: 100vh;
+      padding: 50px 20px;
+      padding-top: 50px;
       display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 18px;
-      font-weight: 600;
-      color: $header-color;
-      &__icon {
-        display: inline-flex;
-        font-size: 27px;
-        margin-right: 10px;
+    }
+    .profile-card {
+      width: 100%;
+      min-height: 460px;
+      margin: auto;
+      box-shadow: 0px 8px 60px -10px rgba(13, 28, 39, 0.6);
+      background: #fff;
+      border-radius: 12px;
+      max-width: 800px;
+      position: relative;
+
+      &__img {
+        width: auto;
+        height: 340px;
+        margin-left: auto;
+        margin-right: auto;
+
+        img {
+          display: block;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          border-top-left-radius: 12px;
+          border-top-right-radius: 12px;
+        }
+      }
+
+      &__cnt {
+        margin-top: 35px;
+        text-align: center;
+        padding: 0 20px;
+        padding-bottom: 40px;
+        transition: all 0.3s;
+      }
+
+      &__name {
+        font-weight: 700;
+        font-size: 24px;
+        color: $primary-color;
+        margin-bottom: 15px;
+      }
+
+      &__txt {
+        font-size: 18px;
+        font-weight: 500;
+        color: #324e63;
+        margin-bottom: 15px;
+        strong {
+          //color: #ff2846;
+          font-weight: 700;
+        }
+      }
+
+      &-loc {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 18px;
+        font-weight: 600;
+        color: $header-color;
+        &__icon {
+          display: inline-flex;
+          font-size: 27px;
+          margin-right: 10px;
+        }
       }
     }
   }
+  // .p-sidebar-left {
+  //   direction: ltr;
+  //   .header {
+  //     text-align: right;
+  //   }
+  //   .list {
+  //     display: block;
+  //     text-align: right;
+  //     list-style: none;
+  //     .item{
+  //       display: flex;
+  //     }
+  //   }
+  // }
 }
