--- a/src/style.scss
+++ b/src/style.scss
@@ -43,6 +43,7 @@ body {
     &:focus {
       box-shadow: 0 7px 30px -10px rgba(150, 170, 180, 0.5);
     }
+    direction: ltr;
   }
   .arabic {
     direction: rtl;
@@ -79,4 +80,19 @@ body {
 
 .p-paginator {
   direction: ltr;
+}
+.p-fileupload {
+  button[aria-label="Upload"] {
+    display: none;
+  }
+  direction: ltr;
+  .p-fileupload-content {
+    width: 50vw;
+    height: 15vw;
+    img {
+      width: 100px;
+      height: 100px;
+      object-fit: cover;
+    }
+  }
 }
