--- a/src/pages/components/navbar/navbar.scss
+++ b/src/pages/components/navbar/navbar.scss
@@ -31,8 +31,7 @@
       display: flex;
       align-items: center;
       .item {
-        display: flex;
-        align-items: center;
+        color: $primary-color;
         margin-right: 20px;
         position: relative;
         i {
