--- a/src/pages/purchases/purchase-orders.scss
+++ b/src/pages/purchases/purchase-orders.scss
@@ -1,16 +1,22 @@
 @import "../../style/vars";
 .purchase-orders {
-  .drop-down {
-    h6 {
-      margin-top: 10px;
+  .selection-container {
+    display: flex;
+    justify-content: center;
+    .selection {
+      display: flex;
+      justify-content: space-between;
+      margin: 20px;
+      padding: 15px;
+      box-shadow: 2px 4px 10px 1px $dark-font-color;
+      border-radius: 10px;
+      background-color: $body-color;
+      width: 50%;
+      h6 {
+        margin: 10px;
+        font-weight: bold;
+        color: $header-color;
+      }
     }
-  }
-  .dropdown-card {
-    padding: 15px;
-    box-shadow: 2px 4px 10px 1px $dark-font-color;
-    border-radius: 2px;
-    height: auto;
-    background-color: $body-color;
-    transition: box-shadow 0.3s ease;
   }
 }
