--- a/src/style/datatable.css
+++ b/src/style/datatable.css
@@ -31,10 +31,6 @@
   width: 100px;
 }
 
-.datatable .p-paginator {
-  direction: ltr;
-}
-
 .datatable .p-column-header-content .p-column-title {
   color: #4a8bdf;
 }
@@ -42,6 +38,20 @@
 .datatable .p-datatable .p-sortable-column .p-sortable-column-icon {
   margin-right: 10px;
   color: #4a8bdf;
+}
+
+.datatable .p-datatable .p-datatable-tbody > tr {
+  word-break: break-word;
+}
+
+.datatable .p-datatable .p-datatable-tbody > tr > .arabic {
+  text-align: right;
+  direction: rtl;
+}
+
+.datatable .p-datatable .p-datatable-tbody > tr > .english {
+  text-align: left;
+  direction: ltr;
 }
 
 .datatable .p-confirm-popup {
