--- a/src/style/datatable.scss
+++ b/src/style/datatable.scss
@@ -1,9 +1,9 @@
 @import "./vars";
 .datatable {
-  // transform: scale(0.96);
-  // .p-datatable-loading-icon {
-  //   margin-top: 150px;
-  // }
+  position: relative;
+  overflow: hidden;
+  box-shadow: 0 0 0 0.5px $header-color; /* Border color */
+  border-radius: 10px;
   .header {
     display: flex;
     justify-content: space-between;
